# tree-sitter-htmldjango

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  binding.gyp  demo-open-tags.html  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_htmldjango/: __init__.py  binding.c
bindings/rust/: lib.rs
queries/: highlights.scm  open-tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c  tag.h
test/corpus/: django.txt  html-django.txt  html.txt  main.txt  stress-tests.txt
test/highlight/: django-advanced.html  django-basic.html  doctype.html
