[package]
name = "tree-sitter-htmldjango"
description = "HTML + Django template grammar for tree-sitter"
version = "0.1.0"
authors = ["boogerlad"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "html", "django"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/boogerlad/tree-sitter-htmldjango"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["LICENSE", "bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.24"
