[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-htmldjango"
description = "HTML + Django template grammar for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "html", "django", "template"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [
  { name = "boogerlad" },
]
requires-python = ">=3.13"
license = "MIT"
readme = "README.md"
dependencies = ["tree-sitter~=0.25.2"]

[project.urls]
Homepage = "https://github.com/boogerlad/tree-sitter-htmldjango"

[tool.cibuildwheel]
build = "cp313-*"
build-frontend = "build"
